--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#home">
           <img
             src="images/conexão infância.svg"
             alt="Conexão Infância Logo"
@@ -78,6 +78,12 @@
               <a class="nav-link" href="#inscricao">Inscrição</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link disabled text-secondary-subtle" href="#fotos">
+              Fotos
+              <span class="badge bg-secondary rounded-pill ms-1">Em breve</span>
+              </a> 
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contato">Contato</a>
             </li>
           </ul>
@@ -90,7 +96,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-4 mb-lg-0">
-            <h1 class="display-4 fw-bold">Bem-vindo ao Conexão Infância!</h1>
+            <h1 class="display-4 fw-bold">Bem-vindo(a) ao Conexão Infância!</h1>
             <p class="lead">
               Um evento dedicado a fortalecer o trabalho interdisciplinar entre
               profissionais da infância, promovendo conhecimento, trocas e
@@ -399,7 +405,7 @@
               <div class="card-body">
                 <h5 class="card-title fw-bold text-primary">Psicopedagogia</h5>
                 <div
-                
+
                   class="d-flex justify-content-start align-items-center mb-3"
                 >
                   <h6 class="card-subtitle text-muted mb-0">Socorro Santos</h6>
@@ -660,6 +666,30 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal Lightbox -->
+  <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content bg-dark border-0">
+        <div class="modal-header border-0">
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center p-0">
+          <img src="" id="modalImage" class="img-fluid" alt="Imagem Ampliada">
+        </div>
+        <div class="modal-footer border-0 justify-content-center">
+          <div class="d-flex">
+            <button type="button" class="btn btn-sm btn-outline-light me-2" id="prevImage">
+              <i class="fas fa-chevron-left"></i> Anterior
+            </button>
+            <button type="button" class="btn btn-sm btn-outline-light" id="nextImage">
+              Próxima <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
