Acrescenta observação para estudantes de graduação

--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
         <div class="row align-items-center">
           <div class="col-lg-6 mb-4 mb-lg-0">
             <h1 class="display-4 fw-bold">Bem-vindo(a) ao Conexão Infância!</h1>
-            <p class="lead">
+            <p class="lead fs-4 text-muted">
               Um evento dedicado a fortalecer o trabalho interdisciplinar entre
               profissionais da infância, promovendo conhecimento, trocas e
               conexões que transformam vidas.
             </p>
-            <div class="event-details mt-4">
+            <div class="event-details mt-4 fs-5">
               <p class="mb-2">
-                <i class="far fa-calendar-alt me-2"></i>
+                <i class="far fa-calendar-alt me-2 text-primary"></i>
                 <strong>Data:</strong> 05 de abril de 2025
               </p>
               <p class="mb-2">
-                <i class="fas fa-map-marker-alt me-2"></i>
+                <i class="fas fa-map-marker-alt me-2 text-primary"></i>
                 <strong>Local:</strong> Auditório 360, torre A, Pátio Brasil
                 Shopping
               </p>
               <p class="mb-2">
-                <i class="far fa-clock me-2"></i>
+                <i class="far fa-clock me-2 text-primary"></i>
                 <strong>Duração:</strong> 08h30 às 18h30
               </p>
             </div>
             <div class="mt-4">
-              <a href="#inscricao" class="btn btn-tertiary btn-lg"
+              <a href="#inscricao" class="btn btn-tertiary btn-lg fw-bold"
                 >Inscreva-se agora</a
               >
             </div>
@@ -142,7 +142,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mb-4">
-            <h2 class="fw-bold">Quem Somos</h2>
+            <h2 class="fw-bold text-muted">Quem Somos</h2>
             <hr class="divider mx-auto" />
           </div>
 
@@ -159,15 +159,15 @@
 
           <div class="col-lg-12 mx-auto fs-5">
             <p class="mb-4">
-              O <strong>Conexão Infância</strong> nasceu do desejo de unir
+              O <strong><span class="text-tertiary">Conexão Infância</span></strong> nasceu do desejo de unir
               profissionais que atuam no desenvolvimento infantil para um
               diálogo interdisciplinar, promovendo um olhar mais amplo e
               integrado sobre a infância.
             </p>
 
             <p class="mb-4">
-              Somos <strong>Juliana Barbosa</strong> e
-              <strong>Vanessa Dias</strong>, psicólogas apaixonadas pela
+              Somos <strong><span class="text-primary">Juliana Barbosa</span></strong> e
+              <strong><span class="text-primary">Vanessa Dias</span></strong>, psicólogas apaixonadas pela
               infância e pelo impacto transformador do trabalho em equipe. Ao
               longo de nossas trajetórias, percebemos que cada profissional da
               infância contribui de forma única para o desenvolvimento das
@@ -176,7 +176,7 @@
             </p>
 
             <p class="mb-4">
-              Foi dessa vontade de <strong>fazer mais pela infância</strong> que
+              Foi dessa vontade de <strong><span class="text-primary">fazer mais pela infância</span></strong> que
               surgiu o Conexão Infância: um espaço para troca de conhecimento,
               construção de parcerias e fortalecimento do trabalho
               interdisciplinar. Acreditamos que, ao unir forças, podemos
@@ -188,9 +188,9 @@
           <div class="col-md-6 mb-4">
             <div class="card h-100 shadow border-0">
               <div class="card-body text-center">
-                <h3 class="card-title fw-bold">Juliana Barbosa</h3>
+                <h3 class="card-title fw-bold text-primary">Juliana Barbosa</h3>
                 <p class="card-text">
-                  Psicóloga e proprietária do <strong>Espaço Dialógico</strong>,
+                  Psicóloga e proprietária do <strong><span class="text-tertiary">Espaço Dialógico</span></strong>,
                   comprometida em promover o diálogo entre as áreas da infância
                   para um atendimento mais integrado e significativo.
                 </p>
@@ -200,9 +200,9 @@
           <div class="col-md-6 mb-4">
             <div class="card h-100 shadow border-0">
               <div class="card-body text-center">
-                <h3 class="card-title fw-bold">Vanessa Dias</h3>
+                <h3 class="card-title fw-bold text-primary">Vanessa Dias</h3>
                 <p class="card-text">
-                  Psicóloga e proprietária do <strong>Espaço Floresça</strong>,
+                  Psicóloga e proprietária do <strong><span class="text-tertiary">Espaço Floresça</span></strong>,
                   dedicada a criar pontes entre os profissionais e as famílias
                   para um desenvolvimento mais acolhedor e efetivo.
                 </p>
@@ -217,10 +217,10 @@
     <section id="palestrantes" class="py-5 bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center mb-5">
+          <div class="col-12 text-center mb-5 text-muted">
             <h2 class="fw-bold">Palestrantes e Programação</h2>
             <p class="lead">
-              Confira os especialistas que farão parte do evento e os temas que
+              Confira as especialistas que farão parte do evento e os temas que
               serão abordados
             </p>
             <hr class="divider mx-auto" />
@@ -434,34 +434,34 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-4 mb-lg-0">
-            <h2 class="fw-bold">Local e Informações</h2>
+            <h2 class="fw-bold text-muted">Local e Informações</h2>
             <hr class="divider ms-0" />
 
             <div class="event-details mt-4">
               <p class="mb-3">
-                <i class="far fa-calendar-alt me-2 text-quaternary"></i>
+                <i class="far fa-calendar-alt me-2 text-primary"></i>
                 <strong>Data:</strong> 05 de abril de 2025
               </p>
               <p class="mb-3">
-                <i class="fas fa-map-marker-alt me-2 text-quaternary"></i>
+                <i class="fas fa-map-marker-alt me-2 text-primary"></i>
                 <strong>Local:</strong> Auditório 360, torre A, Pátio Brasil
                 Shopping
               </p>
               <p class="mb-3">
-                <i class="far fa-clock me-2 text-quaternary"></i>
+                <i class="far fa-clock me-2 text-primary"></i>
                 <strong>Duração:</strong> 08h30 às 18h30 (com 2 horas de
                 intervalo para o almoço)
               </p>
               <p class="mb-3">
-                <i class="fas fa-car me-2 text-quaternary"></i>
+                <i class="fas fa-car me-2 text-primary"></i>
                 <strong>Estacionamento:</strong>R$ 10,00 o dia inteiro
               </p>
               <p class="mb-3">
-                <i class="fas fa-coffee me-2 text-quaternary"></i>
+                <i class="fas fa-coffee me-2 text-primary"></i>
                 <strong>Coffee break:</strong> Incluso
               </p>
               <p class="mb-3">
-                <i class="fas fa-certificate me-2 text-quaternary"></i>
+                <i class="fas fa-certificate me-2 text-primary"></i>
                 <strong>Certificado:</strong> Será enviado por e-mail, no prazo
                 de uma semana
               </p>
@@ -553,7 +553,7 @@
                         R$ 157,60
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
-                        Estudantes de Graduação
+                        Estudantes de Graduação*
                       </h6>
                       <a
                         href="https://pay.kiwify.com.br/2UvDJNA"
@@ -589,6 +589,11 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="alert alert-light mt-4 mb-0">
+                  <i class="fas fa-info-circle text-tertiary me-2"></i>* Estudantes de graduação: enviar comprovante de matrícula por e-mail. 
+                </div>
+
               </div>
             </div>
           </div>
@@ -601,8 +606,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mb-4">
-            <h2 class="fw-bold">Contato</h2>
-            <p>Tem alguma dúvida? Fale conosco!</p>
+            <h2 class="fw-bold text-muted">Contato</h2>
+            <p class="text-muted">Tem alguma dúvida? Fale conosco!</p>
             <hr class="divider mx-auto" />
           </div>
         </div>
