Altera texto observação

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 </div>
 
                 <div class="alert alert-light mt-4 mb-0">
-                  <i class="fas fa-info-circle text-tertiary me-2"></i>* Estudantes de graduação: enviar comprovante de matrícula por e-mail. 
+                  <i class="fas fa-info-circle text-tertiary me-2"></i>* Estudantes de graduação devem enviar o comprovante de matrícula para o e-mail: <span class="fw-bold text-muted">eventos.conexaoinfancia@gmail.com</span>
                 </div>
 
               </div>
