Adiciona vagas para o texto do grupo

--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
                         Grupo (acima de 3 pessoas)
                       </h6>
+                      <h6 class="fw-bold text-muted mobile-subtitle">Apenas 15 vagas</h6>
                       <a
                         href="https://pay.kiwify.com.br/cXegaNg"
                         target="_blank"
