Corrige link lote 1

--- a/index.html
+++ b/index.html
@@ -529,10 +529,10 @@
                         R$ 187,15
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
-                        Lote promocional
+                        Lote 1
                       </h6>
                       <a
-                        href="https://pay.kiwify.com.br/vUIaBoM"
+                        href="https://pay.kiwify.com.br/dz0gzmA"
                         target="_blank"
                         class="btn btn-tertiary mobile-btn"
                       >
