--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
             </li>
             <li class="nav-item">
               <a class="nav-link disabled text-secondary-subtle" href="#fotos">
-              Fotos
-              <span class="badge bg-secondary rounded-pill ms-1">Em breve</span>
-              </a> 
+                Fotos
+                <span class="badge bg-secondary rounded-pill ms-1"
+                  >Em breve</span
+                >
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contato">Contato</a>
@@ -159,26 +161,35 @@
 
           <div class="col-lg-12 mx-auto fs-5">
             <p class="mb-4">
-              O <strong><span class="text-tertiary">Conexão Infância</span></strong> nasceu do desejo de unir
-              profissionais que atuam no desenvolvimento infantil para um
-              diálogo interdisciplinar, promovendo um olhar mais amplo e
-              integrado sobre a infância.
+              O
+              <strong
+                ><span class="text-tertiary">Conexão Infância</span></strong
+              >
+              nasceu do desejo de unir profissionais que atuam no
+              desenvolvimento infantil para um diálogo interdisciplinar,
+              promovendo um olhar mais amplo e integrado sobre a infância.
             </p>
 
             <p class="mb-4">
-              Somos <strong><span class="text-primary">Juliana Barbosa</span></strong> e
-              <strong><span class="text-primary">Vanessa Dias</span></strong>, psicólogas apaixonadas pela
-              infância e pelo impacto transformador do trabalho em equipe. Ao
-              longo de nossas trajetórias, percebemos que cada profissional da
-              infância contribui de forma única para o desenvolvimento das
-              crianças, mas que, quando trabalhamos juntas, conseguimos fazer
-              ainda mais.
+              Somos
+              <strong><span class="text-primary">Juliana Barbosa</span></strong>
+              e <strong><span class="text-primary">Vanessa Dias</span></strong
+              >, psicólogas apaixonadas pela infância e pelo impacto
+              transformador do trabalho em equipe. Ao longo de nossas
+              trajetórias, percebemos que cada profissional da infância
+              contribui de forma única para o desenvolvimento das crianças, mas
+              que, quando trabalhamos juntas, conseguimos fazer ainda mais.
             </p>
 
             <p class="mb-4">
-              Foi dessa vontade de <strong><span class="text-primary">fazer mais pela infância</span></strong> que
-              surgiu o Conexão Infância: um espaço para troca de conhecimento,
-              construção de parcerias e fortalecimento do trabalho
+              Foi dessa vontade de
+              <strong
+                ><span class="text-primary"
+                  >fazer mais pela infância</span
+                ></strong
+              >
+              que surgiu o Conexão Infância: um espaço para troca de
+              conhecimento, construção de parcerias e fortalecimento do trabalho
               interdisciplinar. Acreditamos que, ao unir forças, podemos
               garantir um cuidado mais completo e respeitoso para cada criança.
             </p>
@@ -190,9 +201,11 @@
               <div class="card-body text-center">
                 <h3 class="card-title fw-bold text-primary">Juliana Barbosa</h3>
                 <p class="card-text">
-                  Psicóloga e proprietária do <strong><span class="text-tertiary">Espaço Dialógico</span></strong>,
-                  comprometida em promover o diálogo entre as áreas da infância
-                  para um atendimento mais integrado e significativo.
+                  Psicóloga e proprietária do
+                  <strong
+                    ><span class="text-tertiary">Espaço Dialógico</span></strong
+                  >, comprometida em promover o diálogo entre as áreas da
+                  infância para um atendimento mais integrado e significativo.
                 </p>
               </div>
             </div>
@@ -202,9 +215,11 @@
               <div class="card-body text-center">
                 <h3 class="card-title fw-bold text-primary">Vanessa Dias</h3>
                 <p class="card-text">
-                  Psicóloga e proprietária do <strong><span class="text-tertiary">Espaço Floresça</span></strong>,
-                  dedicada a criar pontes entre os profissionais e as famílias
-                  para um desenvolvimento mais acolhedor e efetivo.
+                  Psicóloga e proprietária do
+                  <strong
+                    ><span class="text-tertiary">Espaço Floresça</span></strong
+                  >, dedicada a criar pontes entre os profissionais e as
+                  famílias para um desenvolvimento mais acolhedor e efetivo.
                 </p>
               </div>
             </div>
@@ -405,7 +420,6 @@
               <div class="card-body">
                 <h5 class="card-title fw-bold text-primary">Psicopedagogia</h5>
                 <div
-
                   class="d-flex justify-content-start align-items-center mb-3"
                 >
                   <h6 class="card-subtitle text-muted mb-0">Socorro Santos</h6>
@@ -500,16 +514,6 @@
 
               <!-- Valor original e informações -->
               <div class="mb-4 pb-3 border-bottom">
-                <div
-                  class="d-flex align-items-center justify-content-center mb-3"
-                >
-                  <h2 class="display-5 fw-bold mb-0 me-2 text-muted">
-                    <s>R$ 197,00</s>
-                  </h2>
-                  <span class="badge bg-secondary rounded-pill px-3 py-2"
-                    >Valor original</span
-                  >
-                </div>
                 <p class="text-muted">
                   Incluso: Acesso a todas as palestras, material de apoio,
                   coffee break e certificado.
@@ -523,16 +527,16 @@
                   <div class="card h-100 border-0 shadow-sm mobile-price-card">
                     <div class="card-body text-center">
                       <span class="badge bg-primary mb-2 mobile-badge"
-                        >5% OFF</span
+                        >Valor Original</span
                       >
                       <h4 class="fw-bold text-primary mobile-price">
-                        R$ 187,15
+                        R$ 197,00
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
-                        Lote 1
+                        Individual
                       </h6>
                       <a
-                        href="https://pay.kiwify.com.br/dz0gzmA"
+                        href="https://pay.kiwify.com.br/2u2D87u"
                         target="_blank"
                         class="btn btn-tertiary mobile-btn"
                       >
@@ -547,10 +551,10 @@
                   <div class="card h-100 border-0 shadow-sm mobile-price-card">
                     <div class="card-body text-center">
                       <span class="badge bg-primary mb-2 mobile-badge"
-                        >10% OFF</span
+                        >5% OFF</span
                       >
                       <h4 class="fw-bold text-primary mobile-price">
-                        R$ 177,30
+                        R$ 187,15
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
                         Estudantes de Graduação*
@@ -571,10 +575,10 @@
                   <div class="card h-100 border-0 shadow-sm mobile-price-card">
                     <div class="card-body text-center">
                       <span class="badge bg-primary mb-2 mobile-badge"
-                        >15% OFF</span
+                        >10% OFF</span
                       >
                       <h4 class="fw-bold text-primary mobile-price">
-                        R$ 167,45
+                        R$ 177,30
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
                         Grupo (acima de 3 pessoas)
@@ -591,9 +595,13 @@
                 </div>
 
                 <div class="alert alert-light mt-4 mb-0">
-                  <i class="fas fa-info-circle text-tertiary me-2"></i>* Estudantes de graduação devem enviar o comprovante de matrícula para o e-mail: <span class="fw-bold text-muted">eventos.conexaoinfancia@gmail.com</span>
+                  <i class="fas fa-info-circle text-tertiary me-2"></i>*
+                  Estudantes de graduação devem enviar o comprovante de
+                  matrícula para o e-mail:
+                  <span class="fw-bold text-muted"
+                    >eventos.conexaoinfancia@gmail.com</span
+                  >
                 </div>
-
               </div>
             </div>
           </div>
@@ -673,28 +681,52 @@
     </footer>
 
     <!-- Modal Lightbox -->
-  <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content bg-dark border-0">
-        <div class="modal-header border-0">
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body text-center p-0">
-          <img src="" id="modalImage" class="img-fluid" alt="Imagem Ampliada">
-        </div>
-        <div class="modal-footer border-0 justify-content-center">
-          <div class="d-flex">
-            <button type="button" class="btn btn-sm btn-outline-light me-2" id="prevImage">
-              <i class="fas fa-chevron-left"></i> Anterior
-            </button>
-            <button type="button" class="btn btn-sm btn-outline-light" id="nextImage">
-              Próxima <i class="fas fa-chevron-right"></i>
-            </button>
+    <div
+      class="modal fade"
+      id="imageModal"
+      tabindex="-1"
+      aria-labelledby="imageModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content bg-dark border-0">
+          <div class="modal-header border-0">
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body text-center p-0">
+            <img
+              src=""
+              id="modalImage"
+              class="img-fluid"
+              alt="Imagem Ampliada"
+            />
+          </div>
+          <div class="modal-footer border-0 justify-content-center">
+            <div class="d-flex">
+              <button
+                type="button"
+                class="btn btn-sm btn-outline-light me-2"
+                id="prevImage"
+              >
+                <i class="fas fa-chevron-left"></i> Anterior
+              </button>
+              <button
+                type="button"
+                class="btn btn-sm btn-outline-light"
+                id="nextImage"
+              >
+                Próxima <i class="fas fa-chevron-right"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
