--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </p>
               <p class="mb-2">
                 <i class="fas fa-map-marker-alt me-2 text-primary"></i>
-                <strong>Local:</strong> Auditório 360, torre A, Pátio Brasil
+                <strong>Local:</strong> Auditório 360, torre A, Sala 510 - Pátio Brasil
                 Shopping
               </p>
               <p class="mb-2">
@@ -458,7 +458,7 @@
               </p>
               <p class="mb-3">
                 <i class="fas fa-map-marker-alt me-2 text-primary"></i>
-                <strong>Local:</strong> Auditório 360, torre A, Pátio Brasil
+                <strong>Local:</strong> Auditório 360, torre A, Sala 510 - Pátio Brasil
                 Shopping
               </p>
               <p class="mb-3">
