--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             <div class="event-details mt-4 fs-5">
               <p class="mb-2">
                 <i class="far fa-calendar-alt me-2 text-primary"></i>
-                <strong>Data:</strong> 05 de abril de 2025
+                <strong>Data:</strong> 20 de setembro de 2025
               </p>
               <p class="mb-2">
                 <i class="fas fa-map-marker-alt me-2 text-primary"></i>
-                <strong>Local:</strong> Auditório 360, torre A, Sala 510 - Pátio Brasil
-                Shopping
+                <strong>Local:</strong> Auditório 360, torre A, Sala 510 - Pátio
+                Brasil Shopping
               </p>
               <p class="mb-2">
                 <i class="far fa-clock me-2 text-primary"></i>
@@ -242,200 +242,172 @@
           </div>
         </div>
 
-        <div class="row g-4">
-          <!-- Palestrante 1 -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card h-100 shadow border-0">
-              <div class="card-img-top speaker-img-container">
-                <img
-                  src="images/png/1.png"
-                  alt="Patrícia Parreira"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-primary">Neuropediatria</h5>
-                <div
-                  class="d-flex justify-content-start align-items-center mb-3"
-                >
-                  <h6 class="card-subtitle text-muted mb-0">
-                    Patrícia Parreira
-                  </h6>
-                  <a
-                    href="https://www.instagram.com/dra.patiparreira/"
-                    target="_blank"
-                    class="text-decoration-none p-2"
-                  >
-                    <i class="fab fa-instagram text-primary fa-lg"></i>
-                  </a>
+        <div class="speakers-container">
+          <!-- Primeira linha: 2 palestrantes -->
+          <div class="speakers-row-1">
+            <!-- Palestrante 1 -->
+            <div class="speaker-card">
+              <div class="card h-100 shadow border-0">
+                <div class="card-img-top speaker-img-container">
+                  <img
+                    src="images/jpg/anamaria.jpg"
+                    alt="Anamaria Reis"
+                    class="img-fluid circular"
+                  />
                 </div>
-                <p class="card-text">
-                  Como identificar atrasos no desenvolvimento neurológico?
-                </p>
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-primary">Psicóloga</h5>
+                  <div
+                    class="d-flex justify-content-start align-items-center mb-3"
+                  >
+                    <h6 class="card-subtitle text-muted mb-0">Anamaria Reis</h6>
+                    <a
+                      href="https://www.instagram.com/anamariareis.psi/"
+                      target="_blank"
+                      class="text-decoration-none p-2"
+                    >
+                      <i class="fab fa-instagram text-primary fa-lg"></i>
+                    </a>
+                  </div>
+                  <p class="card-text">
+                    Como anda a sua Saúde Mental, profissional da saúde?
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Palestrante 2 -->
+            <div class="speaker-card">
+              <div class="card h-100 shadow border-0">
+                <div class="card-img-top speaker-img-container">
+                  <img
+                    src="images/jpg/rodrigo.jpg"
+                    alt="Robrigo Bandeira"
+                    class="img-fluid circular"
+                  />
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-primary">Psicólogo</h5>
+                  <div
+                    class="d-flex justify-content-start align-items-center mb-3"
+                  >
+                    <h6 class="card-subtitle text-muted mb-0">
+                      Robrigo Bandeira
+                    </h6>
+                    <a
+                      href="https://www.instagram.com/rodrigobandeira_psi/"
+                      target="_blank"
+                      class="text-decoration-none p-2"
+                    >
+                      <i class="fab fa-instagram text-primary fa-lg"></i>
+                    </a>
+                  </div>
+                  <p class="card-text">
+                    Como manejar a desregulação com segurança e acolhimento?
+                  </p>
+                </div>
               </div>
             </div>
           </div>
 
-          <!-- Palestrante 2 -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card h-100 shadow border-0">
-              <div class="card-img-top speaker-img-container">
-                <img
-                  src="images/png/2.png"
-                  alt="Larissa Souza"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-primary">Fonoaudiologia</h5>
-                <div
-                  class="d-flex justify-content-start align-items-center mb-3"
-                >
-                  <h6 class="card-subtitle text-muted mb-0">Larissa Souza</h6>
-                  <a
-                    href="https://www.instagram.com/comunicakids/"
-                    target="_blank"
-                    class="text-decoration-none p-2"
-                  >
-                    <i class="fab fa-instagram text-primary fa-lg"></i>
-                  </a>
+          <!-- Segunda linha: 3 palestrantes -->
+          <div class="speakers-row-2">
+            <!-- Palestrante 3 -->
+            <div class="speaker-card">
+              <div class="card h-100 shadow border-0">
+                <div class="card-img-top speaker-img-container">
+                  <img
+                    src="images/jpg/juliana.jpg"
+                    alt="Juliana Barbosa"
+                    class="img-fluid circular"
+                  />
                 </div>
-                <p class="card-text">
-                  Marcos da linguagem e sinais de alerta para dificuldades na
-                  comunicação.
-                </p>
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-primary">Psicóloga</h5>
+                  <div
+                    class="d-flex justify-content-start align-items-center mb-3"
+                  >
+                    <h6 class="card-subtitle text-muted mb-0">
+                      Juliana Barbosa
+                    </h6>
+                    <a
+                      href="https://www.instagram.com/espacodialogico/"
+                      target="_blank"
+                      class="text-decoration-none p-2"
+                    >
+                      <i class="fab fa-instagram text-primary fa-lg"></i>
+                    </a>
+                  </div>
+                  <p class="card-text">
+                    Empreendedorismo e Formação de equipes.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
 
-          <!-- Palestrante 3 -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card h-100 shadow border-0">
-              <div class="card-img-top speaker-img-container">
-                <img
-                  src="images/png/3.png"
-                  alt="Jéssika Medeiros"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-primary">Nutrição</h5>
-                <div
-                  class="d-flex justify-content-start align-items-center mb-3"
-                >
-                  <h6 class="card-subtitle text-muted mb-0">
-                    Jéssika Medeiros
-                  </h6>
-                  <a
-                    href="https://www.instagram.com/nutrijessikamedeiros/"
-                    target="_blank"
-                    class="text-decoration-none p-2"
-                  >
-                    <i class="fab fa-instagram text-primary fa-lg"></i>
-                  </a>
+            <!-- Palestrante 4 -->
+            <div class="speaker-card">
+              <div class="card h-100 shadow border-0">
+                <div class="card-img-top speaker-img-container">
+                  <img
+                    src="images/jpg/camila.jpg"
+                    alt="Camila dos Santos"
+                    class="img-fluid circular"
+                  />
                 </div>
-                <p class="card-text">
-                  Seletividade alimentar: educação alimentar e nutricional como
-                  o caminho para a mudança.
-                </p>
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-primary">
+                    Psicóloga e Neuropsicóloga
+                  </h5>
+                  <div
+                    class="d-flex justify-content-start align-items-center mb-3"
+                  >
+                    <h6 class="card-subtitle text-muted mb-0">
+                      Camila dos Santos
+                    </h6>
+                    <a
+                      href="https://www.instagram.com/camilasantos.psi/"
+                      target="_blank"
+                      class="text-decoration-none p-2"
+                    >
+                      <i class="fab fa-instagram text-primary fa-lg"></i>
+                    </a>
+                  </div>
+                  <p class="card-text">
+                    Altas Habilidades / Superdotação: além da identificação.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
 
-          <!-- Palestrante 4 -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card h-100 shadow border-0">
-              <div class="card-img-top speaker-img-container">
-                <img
-                  src="images/png/4.png"
-                  alt="Kelly Lopes"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-primary">
-                  Terapia Ocupacional
-                </h5>
-                <div
-                  class="d-flex justify-content-start align-items-center mb-3"
-                >
-                  <h6 class="card-subtitle text-muted mb-0">Kelly Lopes</h6>
-                  <a
-                    href="https://www.instagram.com/sensorialkids.terapias/"
-                    target="_blank"
-                    class="text-decoration-none p-2"
-                  >
-                    <i class="fab fa-instagram text-primary fa-lg"></i>
-                  </a>
+            <!-- Palestrante 5 -->
+            <div class="speaker-card">
+              <div class="card h-100 shadow border-0">
+                <div class="card-img-top speaker-img-container">
+                  <img
+                    src="images/jpg/vanessa.jpg"
+                    alt="Vanessa Dias"
+                    class="img-fluid circular"
+                  />
                 </div>
-                <p class="card-text">
-                  O Transtorno do Processamento Sensorial (TPS), suas
-                  características e demandas ocupacionais.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Palestrante 5 -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card h-100 shadow border-0">
-              <div class="card-img-top speaker-img-container">
-                <img
-                  src="images/png/5.png"
-                  alt="Camila Ferrari"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-primary">Neuropsicologia</h5>
-                <div
-                  class="d-flex justify-content-start align-items-center mb-3"
-                >
-                  <h6 class="card-subtitle text-muted mb-0">Camila Ferrari</h6>
-                  <a
-                    href="https://www.instagram.com/neurodesenvolvendo/"
-                    target="_blank"
-                    class="text-decoration-none p-2"
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-primary">Psicóloga</h5>
+                  <div
+                    class="d-flex justify-content-start align-items-center mb-3"
                   >
-                    <i class="fab fa-instagram text-primary fa-lg"></i>
-                  </a>
+                    <h6 class="card-subtitle text-muted mb-0">Vanessa Dias</h6>
+                    <a
+                      href="https://www.instagram.com/vanessadias.psi/"
+                      target="_blank"
+                      class="text-decoration-none p-2"
+                    >
+                      <i class="fab fa-instagram text-primary fa-lg"></i>
+                    </a>
+                  </div>
+                  <p class="card-text">
+                    Orientação de pais: uma abordagem firme e acolhedora.
+                  </p>
                 </div>
-                <p class="card-text">
-                  Avaliação neuropsicológica: Por quê? Quando? Como?
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Palestrante 6 -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card h-100 shadow border-0">
-              <div class="card-img-top speaker-img-container">
-                <img
-                  src="images/png/6.png"
-                  alt="Socorro Santos"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-primary">Psicopedagogia</h5>
-                <div
-                  class="d-flex justify-content-start align-items-center mb-3"
-                >
-                  <h6 class="card-subtitle text-muted mb-0">Socorro Santos</h6>
-                  <a
-                    href="https://www.instagram.com/asocorrosantos/"
-                    target="_blank"
-                    class="text-decoration-none p-2"
-                  >
-                    <i class="fab fa-instagram text-primary fa-lg"></i>
-                  </a>
-                </div>
-                <p class="card-text">
-                  Plano de Ensino Individualizado (PEI) na infância: como
-                  transformar avaliações e diagnósticos em estratégias de ensino
-                  eficazes.
-                </p>
               </div>
             </div>
           </div>
@@ -454,12 +426,12 @@
             <div class="event-details mt-4">
               <p class="mb-3">
                 <i class="far fa-calendar-alt me-2 text-primary"></i>
-                <strong>Data:</strong> 05 de abril de 2025
+                <strong>Data:</strong> 20 de setembro de 2025
               </p>
               <p class="mb-3">
                 <i class="fas fa-map-marker-alt me-2 text-primary"></i>
-                <strong>Local:</strong> Auditório 360, torre A, Sala 510 - Pátio Brasil
-                Shopping
+                <strong>Local:</strong> Auditório 360, torre A, Sala 510 - Pátio
+                Brasil Shopping
               </p>
               <p class="mb-3">
                 <i class="far fa-clock me-2 text-primary"></i>
@@ -503,8 +475,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="fw-bold text-dark">Inscrição</h2>
-            <p class="lead text-dark">
+            <h2 class="fw-bold text-muted">Inscrição</h2>
+            <p class="lead text-muted">
               As vagas são limitadas! Garanta sua participação no Conexão
               Infância.
             </p>
@@ -527,16 +499,16 @@
                   <div class="card h-100 border-0 shadow-sm mobile-price-card">
                     <div class="card-body text-center">
                       <span class="badge bg-primary mb-2 mobile-badge"
-                        >Valor Original</span
+                        >7% OFF</span
                       >
                       <h4 class="fw-bold text-primary mobile-price">
-                        R$ 197,00
+                        R$ 209,90
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
-                        Individual
+                        Inscrição em Dupla
                       </h6>
                       <a
-                        href="https://pay.kiwify.com.br/2u2D87u"
+                        href="https://pay.kiwify.com.br/6HqBAo3"
                         target="_blank"
                         class="btn btn-tertiary mobile-btn"
                       >
@@ -551,16 +523,16 @@
                   <div class="card h-100 border-0 shadow-sm mobile-price-card">
                     <div class="card-body text-center">
                       <span class="badge bg-primary mb-2 mobile-badge"
-                        >5% OFF</span
+                        >Lote 1</span
                       >
                       <h4 class="fw-bold text-primary mobile-price">
-                        R$ 187,15
+                        R$ 224,90
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
-                        Estudantes de Graduação*
+                        Individual
                       </h6>
                       <a
-                        href="https://pay.kiwify.com.br/2UvDJNA"
+                        href="https://pay.kiwify.com.br/9DyOf5X"
                         target="_blank"
                         class="btn btn-tertiary mobile-btn"
                       >
@@ -575,32 +547,23 @@
                   <div class="card h-100 border-0 shadow-sm mobile-price-card">
                     <div class="card-body text-center">
                       <span class="badge bg-primary mb-2 mobile-badge"
-                        >10% OFF</span
+                        >Lote 2</span
                       >
                       <h4 class="fw-bold text-primary mobile-price">
-                        R$ 177,30
+                        R$ 249,90
                       </h4>
                       <h6 class="card-subtitle mb-3 text-muted mobile-subtitle">
-                        Grupo (acima de 3 pessoas)
+                        Individual
                       </h6>
                       <a
                         href="https://pay.kiwify.com.br/cXegaNg"
                         target="_blank"
-                        class="btn btn-tertiary mobile-btn"
+                        class="btn btn-tertiary mobile-btn disabled"
                       >
-                        Garanta sua vaga
+                        Em breve
                       </a>
                     </div>
                   </div>
-                </div>
-
-                <div class="alert alert-light mt-4 mb-0">
-                  <i class="fas fa-info-circle text-tertiary me-2"></i>*
-                  Estudantes de graduação devem enviar o comprovante de
-                  matrícula para o e-mail:
-                  <span class="fw-bold text-muted"
-                    >eventos.conexaoinfancia@gmail.com</span
-                  >
                 </div>
               </div>
             </div>
