--- a/index.html
+++ b/index.html
@@ -3,7 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conexão Infância</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <title>
+      Conexão Infância - Evento para Profissionais da Infância | 20 de Setembro
+      de 2025
+    </title>
+
+    <!-- Meta Tags para SEO e Redes Sociais -->
+    <meta
+      name="description"
+      content="Evento dedicado a fortalecer o trabalho interdisciplinar entre profissionais da infância, promovendo conhecimento, trocas e conexões que transformam vidas. 20 de setembro de 2025 no Pátio Brasil Shopping."
+    />
+    <meta
+      name="keywords"
+      content="psicologia infantil, desenvolvimento infantil, neuropsicologia, educação, formação profissional, brasília, evento"
+    />
+    <meta name="author" content="Conexão Infância" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://conexaoinfancia.com.br/" />
+    <meta
+      property="og:title"
+      content="Conexão Infância - Evento para Profissionais da Infância"
+    />
+    <meta
+      property="og:description"
+      content="Um evento dedicado a fortalecer o trabalho interdisciplinar entre profissionais da infância. 20 de setembro de 2025 no Pátio Brasil Shopping, Brasília."
+    />
+    <meta
+      property="og:image"
+      content="https://conexaoinfancia.com.br/images/logo-semtexto.svg"
+    />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:site_name" content="Conexão Infância" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://conexaoinfancia.com.br/" />
+    <meta
+      property="twitter:title"
+      content="Conexão Infância - Evento para Profissionais da Infância"
+    />
+    <meta
+      property="twitter:description"
+      content="Um evento dedicado a fortalecer o trabalho interdisciplinar entre profissionais da infância. 20 de setembro de 2025 no Pátio Brasil Shopping, Brasília."
+    />
+    <meta
+      property="twitter:image"
+      content="https://conexaoinfancia.com.br/images/logo-semtexto.svg"
+    />
+
+    <!-- WhatsApp -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Logo do Conexão Infância - Evento para Profissionais da Infância"
+    />
+
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
