--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:image"
-      content="https://conexaoinfancia.com.br/images/logo-semtexto.svg"
+      content="https://conexaoinfancia.com.br/images/png/logo-semtexto.png"
     />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:site_name" content="Conexão Infância" />
@@ -52,12 +52,13 @@
     />
     <meta
       property="twitter:image"
-      content="https://conexaoinfancia.com.br/images/logo-semtexto.svg"
+      content="https://conexaoinfancia.com.br/images/png/logo-semtexto.png"
     />
 
     <!-- WhatsApp -->
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:image:type" content="image/png" />
     <meta
       property="og:image:alt"
       content="Logo do Conexão Infância - Evento para Profissionais da Infância"
